--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "postcss": "^8.5.6",
     "sharp": "^0.34.5",
     "tailwindcss": "^3.4.17",
-    "vite": "^7.2.4"
+    "vite": "^7.2.4",
+    "vite-plugin-webfont-dl": "^3.12.0"
   }
 }
