--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "sitemap": "node scripts/generate-sitemap.js"
   },
   "dependencies": {
+    "@builder.io/partytown": "^0.10.3",
     "@emailjs/browser": "^4.4.1",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
